# Sailor-Template

./: .env.example  .gitignore  .gitleaks.toml  .npmrc  .sailor-template.json  .size-limit.json  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE-COMMERCIAL.md  NOTICE.md  README.ja.template.md  README.md  README.template.md  README.zh-CN.template.md  SECURITY.md  biome.json  commitlint.config.cjs  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.yml  knip.json  lefthook.yml  license-policy.json  lighthouserc.json  package.json  playwright.config.ts  playwright.sleptons.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.workspace.ts
.changeset/: agent-runtime-adapters.md  agent-runtime-codebase-index-delta.md  agent-runtime-durable-store.md  agent-runtime-gateway-wiring.md  agent-runtime-git-project-delta.md  agent-runtime-grammar.md  agent-runtime-harness-delta.md  agent-runtime-loop.md  agent-runtime-multichannel-delta.md  agent-runtime-runtime-closure.md  agent-runtime-self-improving-delta.md  agent-runtime-share-permission-delta.md  agent-runtime-site-clone-delta.md  agent-runtime-terminal-suggest-delta.md  agent-runtime-track-b.md  agent-runtime-web-builder-delta.md  atelier-creative-canvas.md  brand-genesis-play.md  canvas-capability.md  capability-governance.md  cinema-capability.md  cinema-media-io.md  cli-drift-fix-2026-05-18.md  code-index-initial.md  config.json  graph-model-decouple.md  knowledge-base-layer.md  tall-pandas-joke.md  (+5 more)
backends/rust/sandbox/: Cargo.toml
backends/rust/sandbox/src/: main.rs
(+1609 files in other folders)
