[package]
name = "nebutra-sandbox"
version = "0.1.0"
edition = "2021"
description = "Nebutra code execution sandbox service (Wasmtime / Firecracker)"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
